[package]
name = "crossterm-display"
version = "0.1.0"
edition = "2021"

license-file = "LICENSE"
keywords = [ "terminal", "crossterm", "light-weight" ]
description = "A simple wrapper for `crossterm` to increase performance"
documentation = "https://docs.rs/crossterm-display"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
